--- a/style.css
+++ b/style.css
@@ -84,6 +84,7 @@
 .clients{
     display: flex;
     margin-top: 70px;
+    background-color: #f5f5f5;
 
 }
 
@@ -93,6 +94,7 @@
 
 h2{
     text-align: center;
+    margin-top: 50px;
 }
 .client1 img, .client2 img ,.client3 img{
     width: 50px;
@@ -117,19 +119,110 @@ margin-right: 70%;
 .about h1{
     text-align: center;
 }
+.about p{
+    font-size: large;
+    margin-left:60px;
+}
 .about img{
     clear:left;
     float:left ;
-    height:300px;
+    height:500px;
+    margin-right: 30px;
 }
 #mission{
-    background-color: #333;
     height:300px;
-
+    background-color: #f5f5f5;
+    margin-right:7%;
+}
+#vision{
+    background-color: #f5f5f5;
+    margin-left:56%;
+    margin-right: 7%;
 }
 
+.contact h1{
+    text-align: center;
+}
+#inputss input{
+    background-color: #f5f5f5;
+}
 
+#inputss, input{
+    margin-left:0%;
+    text-align: center;
+    text-align: center;
+    height:30px;
+    margin: 10px;
+    
 
+}
+#inputs input{
+    margin-top: 50px;
+    margin-left:35%;
+    text-align: center;
+    height:150px;
+    width:550px;
+    background-color: #f5f5f5;
+}
 
+#inputs{
+    margin-right: 10%;
+  
+}
 
-   */
+.contact button{
+    margin-top: 5%;
+    margin-left: 45%;
+    height:50px;
+    width:200px;
+    border-radius: 30px;
+    font-weight:800;
+    font-size: medium;
+}
+#facebook{
+    margin-left: 50%;
+    margin-bottom:20px;
+}
+#facebook p{
+  font-weight: 600;
+  margin-left: 3%;
+    
+}
+#facebook img{
+    width:100px;
+}
+#whatsapp{
+    margin-left: 50%;
+}
+#whatsapp p{
+    font-weight: 600;
+    margin-left: 3%;
+      
+  }
+#whatsapp img{
+    width:100px;
+}
+#twitter{
+    margin-left: 50%;
+    margin-bottom: 10%;
+}
+#twitter p{
+    font-weight: 600;
+    margin-left: 3%;
+      
+  }
+#twitter img{
+    width:100px;
+}
+.social{
+    background-color:#f5f5f5;
+}
+#location{
+  margin-top: 30px;
+  background-color: #f5f5f5;
+  text-align:center;
+  margin-bottom:5%;
+}
+#location img{
+    float: left;
+} */
