styled the body font family to be arial

--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
-/* body {
+body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
   }
-  
+  /*  
   header {
     background-color: #333;
     padding: 20px;
@@ -225,4 +225,4 @@ margin-right: 70%;
 }
 #location img{
     float: left;
-} */
+}*/
