--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
     border: 1px solid #ccc;
     padding: 20px;
   }
-  /*
+  
   .house img {
     width: 100%;
     height: auto;
@@ -56,7 +56,7 @@ body {
   
   .description {
     margin-top: 10px;
-  }
+  }/*
   
   footer {
     background-color: #333;
