--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ body {
   
   .description {
     margin-top: 10px;
-  }/*
+  }
   
   footer {
     background-color: #333;
@@ -76,7 +76,7 @@ body {
   .heading ul li {
     margin-right: 100px;
   }
-  
+  /*  
   button {
     margin-left: 50px;
   }
