--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ h2{
     margin-bottom: 10px;
     margin-left: 70px;
   }
-/*  
+
 .foot{
 margin-right: 70%;
 }
@@ -112,7 +112,7 @@ margin-right: 70%;
 }
 .foot ul li{
     padding: 10px;
-}
+}/*
 .about{
     margin-bottom:20%;
 }
