--- a/style.css
+++ b/style.css
@@ -112,7 +112,8 @@ margin-right: 70%;
 }
 .foot ul li{
     padding: 10px;
-}/*
+}
+/* about section */
 .about{
     margin-bottom:20%;
 }
@@ -129,6 +130,7 @@ margin-right: 70%;
     height:500px;
     margin-right: 30px;
 }
+/*  
 #mission{
     height:300px;
     background-color: #f5f5f5;
