styled the contact section heading contact us to be aligned at the center inputs field to have a background color of light gray the text in the input filed to be displaye at the center the message input to be larger than the name and email input

--- a/style.css
+++ b/style.css
@@ -141,7 +141,7 @@ margin-right: 70%;
     margin-left:56%;
     margin-right: 7%;
 }
-/*  
+/*  contact section */
 .contact h1{
     text-align: center;
 }
@@ -170,7 +170,7 @@ margin-right: 70%;
 #inputs{
     margin-right: 10%;
   
-}
+}/*
 
 .contact button{
     margin-top: 5%;
