--- a/style.css
+++ b/style.css
@@ -215,7 +215,7 @@ margin-right: 70%;
   }
 #twitter img{
     width:100px;
-}/*
+}
 .social{
     background-color:#f5f5f5;
 }
@@ -227,4 +227,4 @@ margin-right: 70%;
 }
 #location img{
     float: left;
-}*/
+}
